Created Home page w initial navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#" style="padding:0px 10px 0px 10px">
+          <%= image_tag "cbs_logo.jpg", :style => "height: 50px" %>
+        </a>
+      </div>
+    </div>
+  </nav>
 
 <%= yield %>
 
