--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,12 +7,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#" style="padding:0px 10px 0px 10px"><%= image_tag "cbs_logo.jpg", :style => "height: 50px" %></a>
+      <a class="navbar-brand" href="/" style="padding:0px 10px 0px 10px"><%= image_tag "cbs_logo.jpg", :style => "height: 50px" %></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", static_pages_about_path %></li>
+        <li><%= link_to "Blog", posts_path %></li>
         <% if user_signed_in? %>
           <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
         <% else %>
