--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,14 +8,19 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/" style="padding:0px 10px 0px 10px"><%= image_tag "cbs_logo.jpg", :style => "height: 50px" %></a>
+      <a class="navbar-brand" href="/" style="padding:5px 10px 5px 10px">Canadian Biomaterials Society<br>Alberta Student Chapter</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "About", static_pages_about_path %></li>
-        <li><%= link_to "Blog", posts_path %></li>
+        <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to "Home", root_path %></li>
+        <li class="<%= 'active' if current_page?(static_pages_about_path) %>"><%= link_to "About", static_pages_about_path %></li>
+        <li class="<%= 'active' if current_page?(posts_path) %>"><%= link_to "Blog", posts_path %></li>
         <% if user_signed_in? %>
-          <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
+          <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email %><span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
+            </ul>
+          </li>
         <% else %>
           <li><%= link_to 'Sign in', new_user_session_path %></li>
         <% end %>
