--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,29 +1,36 @@
-<%= form_for(@post) do |f| %>
+<%= form_for @post, :html => { multipart: true} do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
 
       <ul>
-      <% @post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @post.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :body %><br>
-    <%= f.text_field :body %>
+    <%= f.text_field :body, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :author %><br>
-    <%= f.text_field :author %>
+    <%= f.text_field :author, class: "form-control" %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group input_fields_wrap">
+    <%= f.fields_for :images do |g| %>
+      <%= g.label :image, "Image" %><br>
+      <%= g.file_field :image %>
+    <% end %>
   </div>
+  <div class="form-group">
+    <button class="add_field_button">Add More Fields</button>
+  </div>
+  <%= f.submit "Create Post", class: "btn btn-default" %>
 <% end %>
