--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,26 +1,34 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+<div class="blog-header">
+  <h1 class="blog-title">Abbiomat Blog</h1>
+  <p class="lead blog-description">Some kind of description about the blog</p>
+</div>
+
+<%= will_paginate @posts %>
 
 <% @posts.each do |post| %>
-
-  <div class="post">
-    <header class="post-header">
-      <h1><%= link_to post.title, post %></h1>
-      <h2><%= post.created_at.strftime("%B %d, %Y") %></h2>
-    </header>
-    <div class="post-body">
-      <%= post.body %>
+  <div class="row">
+    <div class="col-sm-8 blog-main">
+      <div class="blog-post">
+        <h2 class="blog-post-title"><%= link_to post.title, post %></h2>
+        <p class="blog-post-meta"><%= post.created_at.strftime("%B %d, %Y") %></p>
+        <%= truncate(post.body) %>
+        <% if user_signed_in? and current_user.admin %>
+          <div>
+            <%= link_to 'Edit', edit_post_path(post) %>
+            <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+          </div>
+        <% end %>
+      </div>
     </div>
-    <%= link_to 'Read More', post, class: 'btn btn-default' %>
-    <% if user_signed_in? and current_user.admin %>
-      <%= link_to 'Edit', edit_post_path(post) %>
-      <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
-    <% end %>
   </div>
-
-  <% if user_signed_in? and current_user.admin %>
-    <%= link_to 'New Post', new_post_path %>
-  <% end %>
-
 <% end %>
+
+<% if user_signed_in? and current_user.admin %>
+  <%= link_to 'New Post', new_post_path %>
+<% end %>
+
+
+
+
