--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,29 @@
-<ul>
-<% @users.each do |user| %>
-  <li><%= user.email %></li>
-<% end %>
-</ul>
+<table class="table">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+      <th>Approved</th>
+      <th>Admin</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+      <tr>
+        <th><%= user.id %></th>
+        <td><%= user.first_name %></td>
+        <td><%= user.last_name %></td>
+        <td><%= user.email %></td>
+        <td><%= check_box_tag 'approved', 'approved', user.approved, disabled: "disabled" %></td>
+        <td><%= check_box_tag 'admin', 'admin', user.admin %></td>
+        <td>
+          <%= link_to 'Edit', edit_admin_user_path(user), class: "btn btn-primary" %>
+          <%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
