--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,11 @@
-<hr>
 <footer class="footer">
-  <nav>
-    <ul>
-      <li><%= link_to "Back to top", :anchor => "top" %></li>
-    </ul>
-  </nav>
+  <div class="container">
+    <div class="row vertical-align">
+      <h3>Find us at:</h3>
+      <ul>
+        <li><a href="#"><i class="fa fa-facebook-square fa-4x"></i></a></li>
+        <li><a href="#"><i class="fa fa-linkedin-square fa-4x"></i></a></li>
+      </ul>
+    </div>
+  </div>
 </footer>
