--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,17 +13,17 @@
           <%= devise_error_messages! %>
 
           <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <span class="input-group-addon"><i class="fa fa-user"></i></span>
             <%= f.email_field:email, autofocus: true, class: "form-control", placeholder: "email" %>
           </div>
 
           <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <span class="input-group-addon"><i class="fa fa-lock"></i></span>
             <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "password" %>
           </div>
 
           <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <span class="input-group-addon"><i class="fa fa-lock"></i></span>
             <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "confirm password" %>
           </div>
 
