--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,34 +1,32 @@
-<p id="notice"><%= notice %></p>
+<div class="container content">
+  <p id="notice"><%= notice %></p>
 
-<div class="blog-header">
-  <h1 class="blog-title">Abbiomat Blog</h1>
-  <p class="lead blog-description">Some kind of description about the blog</p>
-</div>
+  <div class="blog-header">
+    <h1 class="blog-title">Abbiomat Blog</h1>
+    <p class="lead blog-description">Some kind of description about the blog</p>
+  </div>
 
-<%= will_paginate @posts %>
+  <%= will_paginate @posts %>
 
-<% @posts.each do |post| %>
   <div class="row">
     <div class="col-sm-8 blog-main">
-      <div class="blog-post">
-        <h2 class="blog-post-title"><%= link_to post.title, post %></h2>
-        <p class="blog-post-meta"><%= post.created_at.strftime("%B %d, %Y") %></p>
-        <%= truncate(post.body) %>
-        <% if user_signed_in? and current_user.admin %>
-          <div>
-            <%= link_to 'Edit', edit_post_path(post) %>
-            <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
-          </div>
-        <% end %>
-      </div>
+      <% @posts.each do |post| %>
+        <div class="blog-post">
+          <h2 class="blog-post-title"><%= link_to post.title, post %></h2>
+          <p class="blog-post-meta"><%= post.created_at.strftime("%B %d, %Y") %></p>
+          <%= truncate(post.body) %>
+          <% if user_signed_in? and current_user.admin %>
+            <div>
+              <%= link_to 'Edit', edit_post_path(post) %>
+              <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
     </div>
   </div>
-<% end %>
 
-<% if user_signed_in? and current_user.admin %>
-  <%= link_to 'New Post', new_post_path %>
-<% end %>
-
-
-
-
+  <% if user_signed_in? and current_user.admin %>
+    <%= link_to 'New Post', new_post_path %>
+  <% end %>
+</div>
