--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,9 @@
-<p id="notice"><%= notice %></p>
+<div class="container content">
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+  <%= markdown(@post.body) %>
 
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
+  <%= link_to 'Edit', edit_post_path(@post) %> |
+  <%= link_to 'Back', posts_path %>
 
-<p>
-  <strong>Author:</strong>
-  <%= @post.author %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+</div>
