--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -1,6 +1,8 @@
-<p id="notice"><%= notice %></p>
+<div class="container content">
 
 <%= markdown(@static_page.body) %>
 
 <%= link_to 'Edit', edit_static_page_path(@static_page) %> |
 <%= link_to 'Back', static_pages_path %>
+
+</div>
