general styling to pages

--- a/app/assets/stylesheets/carousel.css
+++ b/app/assets/stylesheets/carousel.css
@@ -19,8 +19,8 @@ body {
   left: 0;
   z-index: 20;
 }
-
 /* Flip around the padding for proper display in narrow viewports */
+/*
 .navbar-wrapper > .container {
   padding-right: 0;
   padding-left: 0;
@@ -32,7 +32,7 @@ body {
 .navbar-wrapper .navbar .container {
   width: auto;
 }
-
+*/
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
