--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,10 +10,10 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
  *= require font-awesome
  *= require custom_bootstrap/custom_bootstrap
+ *= require_tree .
  */
 
 #remember_me {
@@ -24,16 +24,13 @@
     margin-top: 80px;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
 html {
     position: relative;
     min-height: 100%;
 }
 
-body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
+.dropdown-menu {
+    width: 100%;
 }
 
 .footer {
@@ -56,6 +53,10 @@ body {
 
     .fa {
         color: #333333;
+    }
+
+    a:hover {
+        background-color: transparent;
     }
 
     li {
