--- a/app/assets/stylesheets/mybootstrap.css
+++ b/app/assets/stylesheets/mybootstrap.css
@@ -5,7 +5,7 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 body {
-  margin: 0;
+  margin-bottom: 100px;
 }
 article,
 aside,
@@ -6219,13 +6219,13 @@ button.close {
   outline: 0;
   color: #ffffff;
   text-decoration: none;
-  opacity: 0.9;
+  opacity: 0.6;
   filter: alpha(opacity=90);
 }
 .carousel-control .icon-prev,
 .carousel-control .icon-next,
-.carousel-control .glyphicon-chevron-left,
-.carousel-control .glyphicon-chevron-right {
+.carousel-control .fa-chevron-left,
+.carousel-control .fa-chevron-right {
   position: absolute;
   top: 50%;
   z-index: 5;
