--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,35 +1,38 @@
-<%= form_tag update_bulk_admin_users_path, :method => :put do %>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-        <th>Approved</th>
-        <th>Admin</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @users.each do |user| %>
-        <%= fields_for "user[]", user do |user_fields| %>
-          <tr>
-            <td><%= user.id %></th>
-            <td><%= user.first_name %></td>
-            <td><%= user.last_name %></td>
-            <td><%= user.email %></td>
-            <td><%= user_fields.check_box(:approved) %></td>
-            <td><%= user_fields.check_box(:admin) %></td>
-            <td>
-              <%= link_to 'Edit', edit_admin_user_path(user), class: "btn btn-primary" %>
-              <%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
-            </td>
-          </tr>
+<div class="container content">
+  <p id="notice"><%= notice %></p>
+
+  <%= form_tag update_bulk_admin_users_path, :method => :put do %>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Email</th>
+          <th>Approved</th>
+          <th>Admin</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @users.each do |user| %>
+          <%= fields_for "user[]", user do |user_fields| %>
+            <tr>
+              <td><%= user.id %></th>
+              <td><%= user.first_name %></td>
+              <td><%= user.last_name %></td>
+              <td><%= user.email %></td>
+              <td><%= user_fields.check_box(:approved) %></td>
+              <td><%= user_fields.check_box(:admin) %></td>
+              <td>
+                <%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+              </td>
+            </tr>
+          <% end %>
         <% end %>
-      <% end %>
-    </tbody>
-  </table>
-  <%= submit_tag "Save Changes" %>
-<% end %>
+      </tbody>
+    </table>
+    <%= submit_tag "Save Changes" %>
+  <% end %>
+</div>
 
