--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container content">
-  <h1>New Post</h1>
+  <h1>New Job</h1>
 
   <%= render 'form' %>
 
-  <%= link_to 'Back', posts_path %>
+  <%= link_to 'Back', jobs_path %>
 </div>
