--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,37 +1,38 @@
 <div class="navbar-wrapper">
-  <div class="container">
-    <nav class="navbar navbar-inverse navbar-static-top" id="top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/" style="padding:0px 10px 0px 10px"><%= image_tag "cbs_logo.png", :style => "height: 50px" %></a>
-          <a class="navbar-brand" href="/" style="padding:5px 10px 5px 10px">Canadian Biomaterials Society<br>Alberta Student Chapter</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="<%= 'active' if current_page?('/') %>"><%= link_to "Home", root_path %></li>
-            <li class="<%= 'active' if current_page?('/about') %>"><%= link_to "About", about_path %></li>
-            <li class="<%= 'active' if current_page?(posts_path) %>"><%= link_to "News", posts_path %></li>
-            <li class="<%= 'active' if current_page?(jobs_path) %>"><%= link_to "Jobs", jobs_path %></li>
-            <li class="<%= 'active' if current_page?('/resources') %>"><%= link_to "Resources", resources_path %></li>
-            <% if user_signed_in? %>
-              <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email %><span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                  <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
-                  <li><%= link_to('Edit profile', edit_user_registration_path) %></li>
-                </ul>
-              </li>
-            <% else %>
-              <li><%= link_to 'Sign in', new_user_session_path %></li>
-            <% end %>
-          </ul>
-        </div>
+  <nav class="navbar navbar-inverse navbar-static-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/" style="padding:0px 10px 0px 10px"><%= image_tag "cbs_logo.png", :style => "height: 50px" %></a>
+        <a class="navbar-brand" href="/" style="padding:5px 10px 5px 10px">Canadian Biomaterials Society<br>Alberta Student Chapter</a>
       </div>
-    </nav>
-  </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="<%= 'active' if current_page?('/') %>"><%= link_to "Home", root_path %></li>
+          <li class="<%= 'active' if current_page?('/about') %>"><%= link_to "About", about_path %></li>
+          <li class="<%= 'active' if current_page?(posts_path) %>"><%= link_to "News", posts_path %></li>
+          <li class="<%= 'active' if current_page?(jobs_path) %>"><%= link_to "Jobs", jobs_path %></li>
+          <li class="<%= 'active' if current_page?('/resources') %>"><%= link_to "Resources", resources_path %></li>
+          <% if user_signed_in? %>
+            <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email %><span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
+                <li><%= link_to('Edit profile', edit_user_registration_path) %></li>
+                <% if current_user.admin %>
+                  <li><%= link_to 'Manage users', admin_users_path %></li>
+                <% end %>
+              </ul>
+            </li>
+          <% else %>
+            <li><%= link_to 'Sign in', new_user_session_path %></li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </div>
