--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,8 +17,8 @@
           <%= truncate(post.body) %>
           <% if user_signed_in? and current_user.admin %>
             <div>
-              <%= link_to 'Edit', edit_post_path(post) %>
-              <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <%= link_to 'Edit', edit_post_path(post), :class => "btn btn-default btn-sm"   %>
+              <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger btn-sm"   %>
             </div>
           <% end %>
         </div>
@@ -27,6 +27,6 @@
   </div>
 
   <% if user_signed_in? and current_user.admin %>
-    <%= link_to 'New Post', new_post_path %>
+    <%= link_to 'New Post', new_post_path, :class => "btn btn-default btn-sm" %>
   <% end %>
 </div>
