--- a/app/views/static_pages/edit.html.erb
+++ b/app/views/static_pages/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Static Page</h1>
+<div class="container content">
+  <h1>Editing Static Page</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @static_page %> |
-<%= link_to 'Back', static_pages_path %>
+  <%= link_to 'Show', @static_page %> |
+  <%= link_to 'Back', static_pages_path %>
+</div>
