--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -2,7 +2,9 @@
 
 <%= markdown(@static_page.body) %>
 
-<%= link_to 'Edit', edit_static_page_path(@static_page) %> |
-<%= link_to 'Back', static_pages_path %>
+<% if user_signed_in? and current_user.admin %>
+  <%= link_to 'Edit', edit_static_page_path(@static_page) %> |
+  <%= link_to 'Back', static_pages_path %>
+<% end %>
 
 </div>
