--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -32,5 +32,5 @@
   <div class="form-group">
     <button class="add_field_button">Add More Fields</button>
   </div>
-  <%= f.submit "Create Job", class: "btn btn-default" %>
+  <%= f.submit "Create Job", class: "btn btn-primary btn-sm" %>
 <% end %>
