--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,32 +1,41 @@
 <div class="container content">
   <p id="notice"><%= notice %></p>
 
-  <div class="blog-header">
-    <h1 class="blog-title">Abbiomat Blog</h1>
-    <p class="lead blog-description">Some kind of description about the blog</p>
-  </div>
-
-  <%= will_paginate @posts %>
-
   <div class="row">
     <div class="col-sm-8 blog-main">
+      <div class="blog-header">
+        <h1 class="blog-title">Abbiomat Blog</h1>
+        <p class="lead blog-description">Some kind of description about the blog</p>
+      </div>
+
+      <%= will_paginate @posts %>
       <% @posts.each do |post| %>
         <div class="blog-post">
-          <h2 class="blog-post-title"><%= link_to post.title, post %></h2>
-          <p class="blog-post-meta"><%= post.created_at.strftime("%B %d, %Y") %></p>
-          <%= truncate(post.body) %>
+          <h2 class="blog-post-title">
+            <%= link_to post.title, post %>
+          </h2>
+          <p class="blog-post-meta">
+          <%= post.created_at.strftime("%B %d, %Y") %>
           <% if user_signed_in? and current_user.admin %>
-            <div>
-              <%= link_to 'Edit', edit_post_path(post), :class => "btn btn-default btn-sm"   %>
-              <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger btn-sm"   %>
-            </div>
+            <%= link_to edit_post_path(post) do %>
+              <i class="fa fa-pencil-square-o"></i>
+            <% end %>
+            <%= link_to post, method: :delete, data: { confirm: 'Are you sure?' } do %>
+              <i class="fa fa-trash"></i>
+            <% end %>
           <% end %>
+          </p>
+          <p><%= truncate(post.body) %></p>
         </div>
       <% end %>
     </div>
   </div>
 
-  <% if user_signed_in? and current_user.admin %>
-    <%= link_to 'New Post', new_post_path, :class => "btn btn-default btn-sm" %>
-  <% end %>
+  <div class="row">
+    <div class="col-sm-8 blog-main">
+      <% if user_signed_in? and current_user.admin %>
+        <%= link_to 'New Post', new_post_path, :class => "btn btn-primary btn-sm" %>
+      <% end %>
+    </div>
+  </div>
 </div>
