--- a/app/assets/stylesheets/custom_bootstrap/variables.less
+++ b/app/assets/stylesheets/custom_bootstrap/variables.less
@@ -5,13 +5,13 @@
 // Variables
 // --------------------------------------------------
 
-@ps-text:         #40362E;
-@ps-nav-bg:       #93BF9E;
-@ps-link-text:    #8C8474;
-@ps-nav-text:     #40362E;
-@ps-well-bg:      #A3D9B0;
-@ps-jumbotron-bg: #A3D9B0;
-@ps-bg:           #F2F0D5;
+@ps-text:         #276131;
+@ps-nav-bg:       #276131;
+@ps-link-text:    #83BD8A;
+@ps-nav-text:     #64A555;
+@ps-well-bg:      #83BD8A;
+@ps-jumbotron-bg: #83BD8A;
+@ps-bg:           #EEEEEE;
 
 //== Colors
 //
@@ -86,11 +86,11 @@
 //## Specify custom location and filename of the included Glyphicons icon font. Useful for those including Bootstrap via Bower.
 
 //** Load fonts from this directory.
-//@icon-font-path:          "../fonts/";
+@icon-font-path:          "../fonts/";
 //** File name for all font files.
-//@icon-font-name:          "glyphicons-halflings-regular";
+@icon-font-name:          "glyphicons-halflings-regular";
 //** Element ID within SVG icon file.
-//@icon-font-svg-id:        "glyphicons_halflingsregular";
+@icon-font-svg-id:        "glyphicons_halflingsregular";
 
 
 //== Components
