--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,66 +1,18 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :avatar %>
-    <%= f.file_field :avatar %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
-
-<h1>New Form</h1>
-
-
-<div class="container">
+<div class="container content">
   <h1>Edit Profile</h1>
   <hr>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true, class: "form-horizontal" }) do |f| %>
     <div class="row">
       <!-- left column -->
       <div class="col-md-3">
-        <div class="text-center">
+        <div class="avatar">
           <% if current_user.avatar? %>
             <%= image_tag current_user.avatar.url(:thumb) %>
           <% else %>
             <img src="//placehold.it/100" class="avatar img-circle" alt="avatar">
           <% end %>
           <h6>Upload a different photo...</h6>
-          <%= file_field :avatar, class: "form-control" %>
+          <%= f.file_field :avatar %>
         </div>
       </div>
 
@@ -121,5 +73,5 @@
       </div>
     </div>
   <% end %>
+  <hr>
 </div>
-<hr>
