--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,8 +3,8 @@
     <div class="row vertical-align">
       <h3>Find us at:</h3>
       <ul>
-        <li><a href="https://www.facebook.com/abbiomat"><i class="fa fa-facebook-square fa-4x"></i></a></li>
-        <li><a href="https://www.linkedin.com/groups/Canadian-Biomaterials-Society-Alberta-Student-6713373"><i class="fa fa-linkedin-square fa-4x"></i></a></li>
+        <li><a href="https://www.facebook.com/abbiomat" target="_blank"><i class="fa fa-facebook-square fa-4x"></i></a></li>
+        <li><a href="https://www.linkedin.com/groups/Canadian-Biomaterials-Society-Alberta-Student-6713373" target="_blank"><i class="fa fa-linkedin-square fa-4x"></i></a></li>
       </ul>
     </div>
   </div>
