--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,22 @@
 <div class="container content">
   <p id="notice"><%= notice %></p>
-
-  <%= markdown(@post.body) %>
-
-  <% if user_signed_in? and current_user.admin %>
-    <%= link_to 'Edit', edit_post_path(@post) %> |
-    <%= link_to 'Back', posts_path %>
-  <% end %>
+  <div class="row">
+    <div class="blog-post">
+      <h2 class="blog-post-title">
+        <%= link_to @post.title, @post %>
+      </h2>
+      <p class="blog-post-meta">
+        <%= @post.created_at.strftime("%B %d, %Y") %>
+        <% if user_signed_in? and current_user.admin %>
+          <%= link_to edit_post_path(@post) do %>
+            <i class="fa fa-pencil-square-o"></i>
+          <% end %>
+          <%= link_to @post, method: :delete, data: { confirm: 'Are you sure?' } do %>
+            <i class="fa fa-trash"></i>
+          <% end %>
+        <% end %>
+      </p>
+      <%= markdown(@post.body) %>
+    </div>
+  </div>
 </div>
