--- a/app/views/static_pages/show.html.erb
+++ b/app/views/static_pages/show.html.erb
@@ -1,10 +1,21 @@
 <div class="container content">
-
-<%= markdown(@static_page.body) %>
-
-<% if user_signed_in? and current_user.admin %>
-  <%= link_to 'Edit', edit_static_page_path(@static_page) %> |
-  <%= link_to 'Back', static_pages_path %>
-<% end %>
-
+  <p id="notice"><%= notice %></p>
+  <div class="row">
+    <div class="col-sm-8 blog-main">
+      <h1>
+        <%= @static_page.title %>
+        <small>
+          <% if user_signed_in? and current_user.admin %>
+            <%= link_to edit_static_page_path(@static_page) do %>
+              <i class="fa fa-pencil-square-o"></i>
+            <% end %>
+            <%= link_to @static_page, method: :delete, data: { confirm: 'Are you sure?' } do %>
+              <i class="fa fa-trash"></i>
+            <% end %>
+          <% end %>
+        </small>
+      </h1>
+      <%= markdown(@static_page.body) %>
+    </div>
+  </div>
 </div>
