--- a/app/views/static_pages/_form.html.erb
+++ b/app/views/static_pages/_form.html.erb
@@ -23,5 +23,5 @@
     <%= f.label :author %><br>
     <%= f.text_field :author, class: 'form-control' %>
   </div>
-  <%= f.submit "Update", class: 'btn btn-primary btn-sm' %>
+  <%= f.submit class: 'btn btn-primary btn-sm' %>
 <% end %>
