Add contact page with recaptcha and mailer

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,7 @@
           <li class="<%= 'active' if current_page?(posts_path) %>"><%= link_to "News", posts_path %></li>
           <li class="<%= 'active' if current_page?(jobs_path) %>"><%= link_to "Jobs", jobs_path %></li>
           <li class="<%= 'active' if current_page?('/resources') %>"><%= link_to "Resources", resources_path %></li>
+          <li class="<%= 'active' if current_page?(new_contact_path) %>"><%= link_to "Contact", new_contact_path %></li>
           <% if user_signed_in? %>
             <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.email %><span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
