--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,32 +8,31 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <%= image_tag "galaxy.jpg" %>
+      <img src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/CBS2015bannerwide.jpg">
       <div class="container">
         <div class="carousel-caption">
-          <h1>First Slide</h1>
-          <p>Some text</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Button</a></p>
+          <h1>CBS 2015</h1>
+          <p>32nd Annual Meeting of the Canadian Biomaterials Society</p>
+          <p><a class="btn btn-lg btn-primary" href="#" role="button">Read More</a></p>
         </div>
       </div>
     </div>
     <div class="item">
-      <%= image_tag "bacteria.jpg" %>
+      <img src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/logo_red.png">
       <div class="container">
         <div class="carousel-caption">
-          <h1>Second Slide</h1>
-          <p>Some text</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Button</a></p>
+          <h1>WBC 2016</h1>
+          <p>10th World Biomaterials Congress Montreal May 17-22, 2016</p>
+          <p><a class="btn btn-lg btn-primary" href="wbc2016.org" role="button">Read More</a></p>
         </div>
       </div>
     </div>
     <div class="item">
-      <%= image_tag "terrain.jpg" %>
+      <img src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/biomaterials.jpg">
       <div class="container">
         <div class="carousel-caption">
-          <h1>Third Slide</h1>
-          <p>Some text</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Button</a></p>
+          <h1>Resources</h1>
+          <p><a class="btn btn-lg btn-primary" href="/resources" role="button">Link</a></p>
         </div>
       </div>
     </div>
@@ -54,8 +53,8 @@
 
   <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+      <h2 class="featurette-heading">Welcome <span class="text-muted">CBS Alberta Student Chapter</span></h2>
+      <p class="lead">Wlecome to the web page of the Alberta Student Chapter of the Canadian Biomaterials Society. With participation from both undergraduates and graduate students in Alberta, this chapter was formed in conjunction with many researchers in the biomaterials field in Alberta. We aim to enhance the interst within biomaterials and promote knowledge of biomaterials research both provincially within the student chapter and nationally, in conjunction with our parent group, the Canadian Biomaterials Society. Please stay tuned for future events and job/mentorship postings.</p>
     </div>
     <div class="col-md-5">
       <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -69,20 +68,8 @@
       <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
     </div>
     <div class="col-md-7">
-      <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-    </div>
-  </div>
-
-  <hr class="featurette-divider">
-
-  <div class="row featurette">
-    <div class="col-md-7">
-      <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-    </div>
-    <div class="col-md-5">
-      <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+      <h2 class="featurette-heading">Mission Statement <span class="text-muted">What we are about</span></h2>
+      <p class="lead">The Alberta Student Chapter (ASC) of the Canadian Biomaterials Society (CBS) is a sub-group of CBS which is mainly located in Edmonton, AB. This group is an incorporated, not-for-profit organization dedicated to the development of biomaterials science, technology, and education in universities, industry, and government within Alberta. CBS-ASC has a long-standing dedication to undergraduate and graduate biomaterials education and has many student and post-doctoral fellow members.</p>
     </div>
   </div>
 
