--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,7 @@
                 <li><%= link_to('Edit profile', edit_user_registration_path) %></li>
                 <% if current_user.admin %>
                   <li><%= link_to 'Manage users', admin_users_path %></li>
+                  <li><%= link_to 'Edit pages', static_pages_path %></li>
                 <% end %>
               </ul>
             </li>
