Reorganize code (move flash message to separate template), update sign up form, create welcome email

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,47 @@
-<div class="container content">
-  <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-    <div class="panel panel-info" >
-      <div class="panel-heading">
-        <div class="panel-title">Sign Up</div>
-        <div style="float:right; font-size: 85%; position: relative; top:-10px">
-          <%= link_to "Sign In", new_session_path(resource_name) %>
+<div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+  <div class="panel panel-info" >
+    <div class="panel-heading">
+      <div class="panel-title">Sign Up</div>
+      <div style="float:right; font-size: 85%; position: relative; top:-10px">
+        <%= link_to "Sign In", new_session_path(resource_name) %>
+      </div>
+    </div>
+
+    <div style="padding-top:30px" class="panel-body" >
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => { :id => "loginform", :class => "form-horizontal", :role => "form" }) do |f| %>
+        <%= devise_error_messages! %>
+
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="fa fa-user"></i></span>
+          <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "email" %>
         </div>
-      </div>
 
-      <div style="padding-top:30px" class="panel-body" >
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => { :id => "loginform", :class => "form-horizontal", :role => "form" }) do |f| %>
-          <%= devise_error_messages! %>
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="fa fa-user"></i></span>
+          <%= f.text_field :first_name, class: "form-control", placeholder: "first name" %>
+        </div>
 
-          <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="fa fa-user"></i></span>
-            <%= f.email_field:email, autofocus: true, class: "form-control", placeholder: "email" %>
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="fa fa-user"></i></span>
+          <%= f.text_field :last_name, class: "form-control", placeholder: "last name" %>
+        </div>
+
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+          <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "password" %>
+        </div>
+
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "confirm password" %>
+        </div>
+
+        <div style="margin-top:10px" class="form-group">
+          <div class="col-sm-12 controls">
+            <%= f.submit "Sign up", class: "btn btn-success" %>
           </div>
-
-          <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-            <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "password" %>
-          </div>
-
-          <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-            <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "confirm password" %>
-          </div>
-
-          <div style="margin-top:10px" class="form-group">
-            <div class="col-sm-12 controls">
-              <%= f.submit "Sign up", class: "btn btn-success" %>
-            </div>
-          </div>
-        <% end %>
-      </div>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
