--- a/app/views/user_mailer/send_new_user_mail.html.erb
+++ b/app/views/user_mailer/send_new_user_mail.html.erb
@@ -1,2 +1,2 @@
-<h1>UserMailer#send_new_user_message</h1>
-<p>Find me in app/views/user_mailer/send_new_user_message.html.erb</p>
+<h1>New User</h1>
+<p><%= @user.first_name %> <%= @user.last_name %> has created an account. Go to <%= link_to 'Manage users', admin_users_url %> to approve account.</p>
