--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-sm-8 blog-main">
     <div class="blog-header">
-      <h1 class="blog-title">Abbiomat Jobs</h1>
+      <h1 class="blog-title">Mentorships</h1>
       <p class="lead blog-description">Description about jobs</p>
     </div>
 
