--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <!-- Carousel ================================================== -->
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div id="myCarousel" class="carousel slide hidden-sm hidden-xs" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -7,6 +7,7 @@
     <li data-target="#myCarousel" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
+    <!--
     <div class="item active">
       <img src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/CBS2015bannerwide.jpg">
       <div class="container">
@@ -17,22 +18,28 @@
         </div>
       </div>
     </div>
-    <div class="item">
-      <img src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/logo_red.png">
+    -->
+    <div class="item active">
+      <img src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/cbs2015.jpg">
       <div class="container">
         <div class="carousel-caption">
-          <h1>WBC 2016</h1>
-          <p>10th World Biomaterials Congress Montreal May 17-22, 2016</p>
+          <p><a class="btn btn-lg btn-primary" href="#" role="button">Read More</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <img src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/WBC2016.jpg">
+      <div class="container">
+        <div class="carousel-caption">
           <p><a class="btn btn-lg btn-primary" href="wbc2016.org" role="button">Read More</a></p>
         </div>
       </div>
     </div>
     <div class="item">
-      <img src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/biomaterials.jpg">
+      <img src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/dna.jpg">
       <div class="container">
         <div class="carousel-caption">
-          <h1>Resources</h1>
-          <p><a class="btn btn-lg btn-primary" href="/resources" role="button">Link</a></p>
+          <p><a class="btn btn-lg btn-primary" href="/resources" role="button">Read More</a></p>
         </div>
       </div>
     </div>
@@ -48,29 +55,30 @@
 </div>
 <!-- /.carousel -->
 
-<!-- START THE FEATURETTES -->
+<div class="container content">
+  <!-- START THE FEATURETTES -->
 
-<div class="row featurette">
-  <div class="col-md-7">
-    <h2 class="featurette-heading">Welcome <span class="text-muted">CBS Alberta Student Chapter</span></h2>
-    <p class="lead">Wlecome to the web page of the Alberta Student Chapter of the Canadian Biomaterials Society. With participation from both undergraduates and graduate students in Alberta, this chapter was formed in conjunction with many researchers in the biomaterials field in Alberta. We aim to enhance the interst within biomaterials and promote knowledge of biomaterials research both provincially within the student chapter and nationally, in conjunction with our parent group, the Canadian Biomaterials Society. Please stay tuned for future events and job/mentorship postings.</p>
+  <div class="row featurette">
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Welcome to the CBS Alberta Student Chapter<span class="text-muted"></span></h2>
+      <p class="lead">Welcome to the web page of the Alberta Student Chapter of the Canadian Biomaterials Society. With participation from both undergraduate and graduate students in Alberta, this chapter was formed in conjunction with many researchers in the biomaterials field in Alberta. We aim to enhance and promote knowledge of biomaterials research both provincially within the student chapter and nationally, in conjunction with our parent group, the Canadian Biomaterials Society. Please stay tuned for future events and job/mentorship postings.</p>
+    </div>
+    <div class="col-md-5">
+      <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/edmonton1.jpg" alt="Arial Edmonton">
+    </div>
   </div>
-  <div class="col-md-5">
-    <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-5">
+      <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/abbiomat/assets/ualberta.jpg" alt="UofA">
+    </div>
+    <div class="col-md-7">
+      <h2 class="featurette-heading">Mission Statement <span class="text-muted"></span></h2>
+      <p class="lead">The Alberta Student Chapter (ASC) of the Canadian Biomaterials Society (CBS) is a sub-group of CBS which is mainly located in Edmonton, AB. This group is an incorporated, not-for-profit organization dedicated to the development of biomaterials science, technology, and education in universities, industry, and government within Alberta. CBS-ASC has a long-standing dedication to undergraduate and graduate biomaterials education and has many student and post-doctoral fellow members.</p>
+    </div>
   </div>
+
+  <!-- /END THE FEATURETTES -->
 </div>
-
-<hr class="featurette-divider">
-
-<div class="row featurette">
-  <div class="col-md-5">
-    <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
-  </div>
-  <div class="col-md-7">
-    <h2 class="featurette-heading">Mission Statement <span class="text-muted">What we are about</span></h2>
-    <p class="lead">The Alberta Student Chapter (ASC) of the Canadian Biomaterials Society (CBS) is a sub-group of CBS which is mainly located in Edmonton, AB. This group is an incorporated, not-for-profit organization dedicated to the development of biomaterials science, technology, and education in universities, industry, and government within Alberta. CBS-ASC has a long-standing dedication to undergraduate and graduate biomaterials education and has many student and post-doctoral fellow members.</p>
-  </div>
-</div>
-
-<!-- /END THE FEATURETTES -->
-
